# Bonsai-App

./: .cursorrules  .editorconfig  .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  LICENSE  babel.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml  requirements.txt  test_imports.py  test_supabase.py
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: auth.py  subscriptions.py
apps/api/app/core/: auth.py  config.py  database.py  supabase.py
apps/api/app/db/: policies.sql  schema.sql  storage.sql  subscription_schema.sql
apps/api/app/models/: auth.py  subscription.py
apps/api/bonsai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: migrate.py
apps/mobile/: .gitignore  app.json  babel.config.js  eas.json  edit_tamagui.config.d.ts  index.ts  metro.config.js  package-lock.json  package.json  tamagui.config.d.ts  tamagui.config.js  tamagui.config.ts  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/hooks/: useAuth.ts
apps/mobile/lib/: supabase.ts
apps/mobile/polyfills/: empty-shim.js  realtime-polyfill.js  (+1 more)
rules/: project-rules.mdc  python-312-fastapi-best-practices-cursorrules-prom.mdc  python-fastapi-scalable-api-cursorrules-prompt-file.mdc  react-native-expo-cursorrules-prompt-files.mdc  react-native-expo-router-typescript-windows-cursorrules-prompt-file.mdc  react-query-cursorrules-prompt-file.mdc  typescript-expo-jest-detox-cursorrules-prompt-file.mdc  typescript-react-nextui-supabase-cursorrules-promp.mdc
(+22 files in other folders)
