[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai-api"
version = "0.1.0"
description = "Bonsai API for fitness and nutrition tracking"
authors = [
    {name = "Alfonso Mayoral", email = "alfonsomayoral@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.41",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.2.1",
    "starlette>=0.46.2",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "supabase>=2.3.4",
    "email-validator>=2.1.0"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["app", "app.api", "app.api.v1", "app.core", "app.models"] 